[package]
name = "graphql-wasm-parser"
version = "0.0.1"
authors = ["Andreas Marek <andimarek@fastmail.fm>"]
edition = "2018"
description = "graphql parser"
license = "MIT"
repository = "https://github.com/graphql-wasm/graphql-wasm-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2.50"
features = ["serde-serialize"]

